--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
         <p>
           This project was coded by
           <a href="https://github.com/lapyaephyu" target="_blank">Pauline</a>
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a
+            href="https://github.com/lapyaephyu/my-weather-app"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
