--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://sc-weather-forecast-app.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
